fix artist search height collapse

--- a/themes/coop-radio/sass/templates/_artist-library.scss
+++ b/themes/coop-radio/sass/templates/_artist-library.scss
@@ -4,14 +4,12 @@
 
 .artist-library__container {
   position: absolute;
-  top: 8vh;
+  top: $header_height;
   right: 0;
-  bottom: 0;
   left: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  min-height: 650px;
 }
 
 .artist-library__scroll-container {
